crates/wdl-analysis/tests/validation/missing-call-input-unsupported/source.errors
error: omitting the `input` keyword in a call statement requires WDL version 1.2
  ┌─ tests/validation/missing-call-input-unsupported/source.wdl:7:16
  │
7 │     call foo { foo = bar }
  │                ^^^^^^^^^ missing an `input` keyword before this input
  │
  = fix: add an `input` keyword followed by a colon before any call inputs

